[gd_scene load_steps=2 format=2]

[ext_resource path="res://Client/Menu/KeybindMenu.gd" type="Script" id=1]

[node name="KeybindMenu" type="PopupPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 50.0
offset_right = -100.0
offset_bottom = -50.0
custom_minimum_size = Vector2( 500, 300 )
script = ExtResource( 1 )

[node name="PopupPanel" type="PopupPanel" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 820.0
offset_bottom = 496.0

[node name="Label" type="Label" parent="PopupPanel"]
offset_left = 4.0
offset_top = 4.0
offset_right = 812.0
offset_bottom = 488.0
size_flags_horizontal = 3
size_flags_vertical = 2
text = "Enter an action for action_name..."
align = 1
valign = 1

[node name="ActionName" type="Label" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 820.0
offset_bottom = 496.0
text = "command_name"

[node name="ActionButton" type="Button" parent="."]
visible = false
offset_left = 4.0
offset_top = 4.0
offset_right = 820.0
offset_bottom = 496.0
text = "current_key"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 4.0
offset_top = 4.0
offset_right = 820.0
offset_bottom = 496.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
offset_left = 369.0
offset_right = 446.0
offset_bottom = 74.0
size_flags_horizontal = 6
size_flags_vertical = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
offset_right = 77.0
offset_bottom = 14.0
text = "Keybindings"
align = 1
valign = 1

[node name="GridContainer" type="GridContainer" parent="ScrollContainer/VBoxContainer"]
offset_left = 38.0
offset_top = 34.0
offset_right = 38.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
columns = 2

[node name="ReturnButton" type="Button" parent="ScrollContainer/VBoxContainer"]
offset_top = 54.0
offset_right = 77.0
offset_bottom = 74.0
text = "Go Back"

[connection signal="button_down" from="ScrollContainer/VBoxContainer/ReturnButton" to="." method="_on_ReturnButton_down"]
